k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eks-app
  template:
    metadata:
      labels:
        app: eks-app
    spec:
      containers:
      - name: eks-app-container
        image: 339712988423.dkr.ecr.us-east-1.amazonaws.com/eks-app:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
