k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eks-app-service
spec:
  type: ClusterIP
  selector:
    app: eks-app
  ports:
    - port: 3000
      targetPort: 3000
